--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,3 +1,6 @@
 <div class="main-container">
-  <router-outlet></router-outlet>
+  <app-nav></app-nav>
+  <div class="main-wrapper">
+    <router-outlet></router-outlet>
+  </div>
 </div>
