--- a/src/app/core/layout/landing/landing.component.scss
+++ b/src/app/core/layout/landing/landing.component.scss
@@ -5,6 +5,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        position: relative;
         height: 320px;
       }
       &:nth-child(1) {
