Listagem e detalhamento de serviço

--- a/src/app/features/services/service/service.component.html
+++ b/src/app/features/services/service/service.component.html
@@ -20,4 +20,7 @@
       {{ service.descricao }}
     </div>
   </div>
+  <div class="actions-container">
+    <button mat-flat-button class="custom-flat-button">Visualizar datas disponíveis</button>
+  </div>
 </div>
