--- a/src/app/features/services/service/service.component.scss
+++ b/src/app/features/services/service/service.component.scss
@@ -55,4 +55,10 @@
       background-color: var(--background-grey);
     }
   }
+
+  .actions-container {
+    margin-top: 30px;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
