--- a/src/app/features/search/search.component.scss
+++ b/src/app/features/search/search.component.scss
@@ -11,7 +11,7 @@
   &-field {
     display: flex;
     align-items: center;
-    margin: 25px 0;
+    margin: 40px 0;
     font-size: 12px;
 
     mat-form-field {
@@ -91,6 +91,22 @@
           color: var(--primary-orange);
         }
       }
+    }
+  }
+
+  &-empty {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    h3 {
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+
+    img {
+      height: 200px;
+      width: auto;
     }
   }
 }
