--- a/src/app/features/search/search.component.html
+++ b/src/app/features/search/search.component.html
@@ -1,3 +1,4 @@
+<app-spinner *ngIf="isLoading"></app-spinner>
 <div class="search-container layout-wrapper">
   <div class="search-container-field">
     <mat-form-field appearance="outline" color="primary">
