--- a/src/app/features/services/services.component.html
+++ b/src/app/features/services/services.component.html
@@ -1,3 +1,4 @@
+<app-spinner *ngIf="isLoading"></app-spinner>
 <div class="services-container layout-wrapper">
   <h1>Serviços</h1>
   <!-- <div class="filters-container"></div> -->
