--- a/src/app/features/services/service/service.component.html
+++ b/src/app/features/services/service/service.component.html
@@ -1,3 +1,4 @@
+<app-spinner *ngIf="isLoading"></app-spinner>
 <div class="service-container layout-wrapper">
   <div class="back-button">
     <button mat-flat-button class="custom-rounded-outline-button" (click)="backToList()">
