fix: correção nomenclatura

--- a/src/app/features/services/service/service.component.html
+++ b/src/app/features/services/service/service.component.html
@@ -22,6 +22,8 @@
     </div>
   </div>
   <div class="actions-container">
-    <button mat-flat-button class="custom-flat-button">Visualizar datas disponíveis</button>
+    <button mat-flat-button class="custom-flat-button" (click)="goToAgenda()">
+      Visualizar horarios disponíveis
+    </button>
   </div>
 </div>
