--- a/src/app/features/services/service/create/create.component.html
+++ b/src/app/features/services/service/create/create.component.html
@@ -2,20 +2,73 @@
 <div class="create-container layout-wrapper">
   <h1>Cadastrar um serviço</h1>
 
+  <img
+    *ngIf="createForm.get('logo')?.value.file !== null"
+    [src]="createForm.get('logo')?.value.base64"
+    class="image-preview"
+    style="height: 150px; width: auto; max-width: 400px; margin-top: 20px"
+  />
   <form [formGroup]="createForm">
     <div class="create-container-form">
+      <app-file-uploader
+        [file]="createForm.get('logo')"
+        accept="image/png, image/jpeg"
+        title="Selecionar imagem"
+        (onSelect)="onFileSelected($event)"
+      ></app-file-uploader>
       <mat-form-field appearance="outline">
         <mat-label>Título</mat-label>
-        <input type="text" matInput formControlName="titulo" placeholder="Título" />
+        <input type="text" matInput formControlName="titulo" placeholder="Título" required />
       </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>CNPJ</mat-label>
-        <input type="number" matInput formControlName="cnpj" placeholder="CNPJ" />
+      <mat-form-field appearance="outline" color="primary">
+        <mat-label>Categoria</mat-label>
+        <mat-select required formControlName="categoria">
+          <mat-option *ngFor="let category of categories" [value]="category.id">
+            {{ category.name }}
+          </mat-option>
+        </mat-select>
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Descrição</mat-label>
         <input type="textarea" matInput formControlName="descricao" placeholder="Descrição" />
       </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Métodos de pagamento</mat-label>
+        <mat-select formControlName="formas_pagamento" multiple>
+          <mat-option *ngFor="let payment of paymentMethods" [value]="payment.id">
+            {{ payment.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field appearance="outline" color="primary">
+        <mat-label>Valor do serviço</mat-label>
+        <input
+          type="text"
+          currencyMask
+          [options]="{
+            prefix: 'R$ ',
+            thousands: '.',
+            decimal: ','
+          }"
+          matInput
+          formControlName="valor"
+        />
+      </mat-form-field>
+      <mat-slide-toggle color="primary" formControlName="presencial">
+        Serviço presencial
+      </mat-slide-toggle>
     </div>
   </form>
+
+  <footer>
+    <button
+      type="button"
+      [disabled]="disableButton()"
+      (click)="onSubmit()"
+      class="custom-flat-button"
+      mat-flat-button
+    >
+      Cadastrar serviço
+    </button>
+  </footer>
 </div>
