--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,7 @@ $marcai-web-theme: mat.define-light-theme(
   --primary-black: #616161;
 
   --primary-grey: #a1a6ae;
+  --secondary-grey: #f4f7fa;
 
   --primary-orange: #ea5812;
   --darker-orange: #c54102;
