--- a/src/app/features/services/service/create/create.component.scss
+++ b/src/app/features/services/service/create/create.component.scss
@@ -7,6 +7,13 @@
     font-weight: 600;
   }
 
+  .title-container {
+    background-color: var(--secondary-grey);
+    border-radius: 6px;
+    padding: 10px 20px;
+    margin: 30px 0;
+  }
+
   &-form {
     margin-top: 30px;
     grid-template-columns: repeat(8, 1fr);
@@ -51,6 +58,34 @@
       display: flex;
       align-items: center;
       height: 45px;
+    }
+  }
+
+  &-agenda {
+    &-content {
+      &-item {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-bottom: 30px;
+
+        &-day {
+          width: 120px;
+        }
+
+        &-hours {
+          display: flex;
+          align-items: center;
+          gap: 20px;
+
+          input {
+            padding: 8px 10px;
+            border-radius: 5px;
+            border: 1px solid var(--border-color);
+            color: var(--primary-grey);
+          }
+        }
+      }
     }
   }
 
