--- a/src/app/features/services/service/service.component.scss
+++ b/src/app/features/services/service/service.component.scss
@@ -64,61 +64,39 @@
     display: flex;
     flex-flow: column;
 
-
-    .title-container {
-      background-color: var(--secondary-grey);
-      border-radius: 6px;
-      padding: 10px 20px;
-      margin: 25px 0px;
+    &-week {
+      display: flex;
+      justify-content: space-between;
+      gap: 20px;
     }
 
-    .service-schedule-day {
-      background-color: var(--secondary-grey);
-      border-radius: 6px;
-      padding: 10px 10px;
-      // width: 150px;
-      flex-grow: 1;
-      // flex-basis: auto;
-      height: 300px;
-      float: left;
-      // margin-right: 10px;
-    }
+    &-day {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      min-height: 300px;
+      padding: 15px;
+      border-radius: 8px;
+      background-color: var(--background-grey);
 
-    .service-schedule-spacing {
-      float: left;
-      width: 10px;
-      height: 20px;
-    }
+      &.disabled {
+        opacity: 0.7;
+      }
 
-    .scheduling-item {
-      background-color: white;
-      margin-top: 10px;
-      border-radius: 6px;
-      padding: 10px 20px;
-      flex-grow: 1;
-      // flex-basis: auto;
-      float: left;
-    }
-
-    // .title-container {
-    //   width: 100%;
-    //   display: flex;
-    //   justify-content: space-between;
-    //   align-items: center;
-
-    //   h1 {
-    //     margin-bottom: 8px;
-    //   }
-
-    //   mat-icon {
-    //     cursor: pointer;
-    //   }
-    // }
-
-    .available {
-      font-size: 0.8rem;
-      font-weight: 600;
-      color: var(--primary-orange);
+      &-hour {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: white;
+        padding: 10px;
+        width: 100%;
+        border-radius: 6px;
+      }
+      h3 {
+        text-align: center;
+        color: var(--primary-orange);
+        font-weight: 600;
+      }
     }
 
     .description {
@@ -126,6 +104,13 @@
       padding: 20px;
       border-radius: 8px;
       background-color: var(--background-grey);
+    }
+
+    .title-container {
+      background-color: var(--secondary-grey);
+      border-radius: 6px;
+      padding: 10px 20px;
+      margin: 25px 0px;
     }
   }
 
