--- a/src/app/features/services/service/service.component.scss
+++ b/src/app/features/services/service/service.component.scss
@@ -90,6 +90,7 @@
         background-color: white;
         padding: 10px;
         width: 100%;
+        margin-bottom: 10px;
         border-radius: 6px;
       }
       h3 {
