--- a/src/app/core/layout/nav/nav.component.html
+++ b/src/app/core/layout/nav/nav.component.html
@@ -22,7 +22,7 @@
       </button>
     </div>
 
-    <div class="nav-container-wrapper-nav">
+    <div class="nav-container-wrapper-nav" *ngIf="isLogged">
       <mat-tab-group
         class="tabs-wrapper"
         [selectedIndex]="selected.value"
@@ -35,18 +35,20 @@
           [label]="tab.displayName"
         >
         </mat-tab>
+        <mat-tab class="tab-item">
+          <ng-template mat-tab-label>
+            <div class="user-wrapper">
+              <div class="user-image">
+                <img [src]="logoUrl" alt="logo" data-test="logo-img" />
+              </div>
+            </div>
+          </ng-template>
+        </mat-tab>
       </mat-tab-group>
       <div class="profile-container">
-        <div class="user-wrapper">
-          <div class="user-image">
-            <img [src]="logoUrl" alt="logo" data-test="logo-img" />
-          </div>
-        </div>
-        <div>
-          <a class="logout" (click)="logOut()">
-            <span class="material-icons"> logout </span>
-          </a>
-        </div>
+        <a class="logout" (click)="logOut()">
+          <span class="material-icons"> logout </span>
+        </a>
       </div>
     </div>
   </div>
